--- a/modules/fontrendering/ext/freetype/CMakeLists.txt
+++ b/modules/fontrendering/ext/freetype/CMakeLists.txt
@@ -4,11 +4,11 @@ set(SKIP_INSTALL_ALL TRUE)
 
 # Try to explicity control what dependencies freetype uses. 
 # Otherwise it will go ahread and depend on what ever it finds.
-set(FT_WITH_ZLIB ON)
-set(FT_WITH_PNG ON)
-set(FT_WITH_BZIP2 OFF)
-set(FT_WITH_HARFBUZZ OFF)
-set(FT_WITH_BROTLI OFF)
+set(FT_REQUIRE_ZLIB ON)
+set(FT_REQUIRE_PNG ON)
+set(FT_DISABLE_BZIP2 ON)
+set(FT_DISABLE_HARFBUZZ ON)
+set(FT_DISABLE_BROTLI ON)
 
 set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB OFF)
 set(CMAKE_DISABLE_FIND_PACKAGE_PNG OFF)
@@ -25,11 +25,13 @@ ivw_suppress_compiler_warnings(${targets})
 set_target_properties(${targets} PROPERTIES MACOSX_RPATH ON)
 ivw_default_install_targets(${targets})
 
-#--------------------------------------------------------------------
 # Creates VS folder structure
 ivw_define_standard_definitions(freetype freetype)
 ivw_folder(freetype ext)
 
-#--------------------------------------------------------------------
 # Make package (for other projects to find)
 ivw_register_package(Freetype freetype)
+
+if(NOT TARGET Freetype::Freetype)
+    add_library(Freetype::Freetype ALIAS freetype)
+endif()
