GHA: disable run in linux apt for now

--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -353,11 +353,12 @@ jobs:
       run: >
         cmake --build build --config Release --parallel --target all
 
-    - name: "Run"
-      shell: bash
-      run: |
-        cd build/bin
-        ./inviwo --logconsole --quit
+    # Libcef.so is in the bin not lib dir.
+    #- name: "Run"
+    #  shell: bash
+    #  run: |
+    #    cd build/bin
+    #    ./inviwo --logconsole --quit
 
     - name: "Setup tmate session (on failure and debug_enabled)"
       if: ${{ failure() && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
