--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -45,6 +45,7 @@ jobs:
             targets: 'ALL_BUILD'
             installer: 'inviwo-installer-win'
             artifact: 'build/inviwo-v*.exe'
+            run: './${{ matrix.configuration }}/inviwo-cli.exe --logconsole --quit'
           
           - system: macos
             os: 'macos-13' # for now macos-latest == macos-12 since macos-13 is still "beta"
@@ -57,6 +58,7 @@ jobs:
             targets: 'all'
             installer: 'inviwo-installer-macos'
             artifact: 'build/inviwo-v*.dmg'
+            run: './inviwo.app/Contents/MacOS/inviwo --logconsole --quit'
           
           - system: linux
             os: 'ubuntu-22.04'
@@ -72,6 +74,7 @@ jobs:
             targets: 'all'
             installer: 'inviwo-installer-ubuntu'
             artifact: 'build/inviwo-v*.deb'
+            run: './inviwo --logconsole --quit'
           
           # linkage
           - linkage: 'dynamic'
@@ -222,21 +225,6 @@ jobs:
         path: inviwo
         submodules: recursive
 
-    - name: "Generate Changelog"
-      id: build_changelog
-      uses: mikepenz/release-changelog-builder-action@v4
-      with:
-        toTag: ${{ github.ref }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: "Log Changelog"
-      shell: bash
-      run: |
-        echo "-- Changes --"
-        echo "${{ steps.build_changelog.outputs.changelog }}"
-        echo "-- End --"
-
     - name: "Configure CMake"
       shell: bash
       run: >
@@ -259,22 +247,11 @@ jobs:
         cmake --build build --config ${{ matrix.configuration }} 
         --parallel --target ${{ matrix.targets }}
 
-    - name: "Run (Win)"
-      if: runner.os == 'Windows'
-      shell: bash
-      working-directory: "build/bin/${{ matrix.configuration }}"
-      run: ./inviwo-cli.exe --logconsole --quit
-    - name: "Run (macOS)"
-      if: runner.os != 'macOS'
+    - name: "Run"
       shell: bash
       working-directory: "build/bin"
-      run: ./inviwo.app/Contents/MacOS/inviwo --logconsole --quit
-    - name: "Run (Linux)"
-      if: runner.os != 'Linux'
-      shell: bash
-      working-directory: "build/bin"
-      run: ./inviwo --logconsole --quit
-
+      run: ${{ matrix.run }}
+      
     - name: "Upload installer"
       if: matrix.linkage == 'dynamic' && matrix.configuration == 'Release'
       uses: actions/upload-artifact@v3
@@ -297,7 +274,7 @@ jobs:
         path: build/docs/python-api/*
     
     - name: "Setup tmate session (on failure and debug_enabled)"
-      if: ${{ failure() || (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
+      if: ${{ failure() && (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
       uses: mxschmitt/action-tmate@v3
       timeout-minutes: 10
       with:
@@ -375,7 +352,7 @@ jobs:
       run: ./inviwo --logconsole --quit
 
     - name: "Setup tmate session (on failure and debug_enabled)"
-      if: ${{ failure() || (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
+      if: ${{ failure() && (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
       uses: mxschmitt/action-tmate@v3
       timeout-minutes: 10
       with:
@@ -449,17 +426,42 @@ jobs:
         ./inviwo --logconsole --quit
 
     - name: "Setup tmate session (on failure and debug_enabled)"
-      if: ${{ failure() || (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
+      if: ${{ failure() && (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
       uses: mxschmitt/action-tmate@v3
       timeout-minutes: 10
       with:
         limit-access-to-actor: true
+ 
+ 
+  create-changelog:
+    name: "Create Changelog"
+    runs-on: ubuntu-latest
+    steps:
+    - name: "Generate Changelog"
+      id: changelog
+      uses: mikepenz/release-changelog-builder-action@v4
+      with:
+        toTag: ${{ github.ref }}
+        outputFile: changelog.md
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: "Log Changelog"
+      shell: bash
+      run: |
+        echo "-- Changes --"
+        echo "${{ steps.changelog.outputs.changelog }}"
+        echo "-- End --"
+    - name: "Upload Changelog"
+      uses: actions/upload-artifact@v3
+      with:
+        name: changelog.md
+        path: changelog.md
 
   update-api-docs:
     name: "Publish updated API Docs"
     if: github.ref == 'refs/heads/master'
-    needs: [build, test-installer]
+    needs: [build, test-installer, build-linux-apt]
     runs-on: windows-latest
     steps:
       - name: "Clone Inviwo"
@@ -502,7 +504,7 @@ jobs:
   update-latest-release:
     name: "Update latest release"
     if: github.ref == 'refs/heads/master'
-    needs: [build, test-installer]
+    needs: [build, test-installer, build-linux-apt]
     strategy:
       matrix:
         os: [windows-latest] # macos-latest,
